@@ -42,7 +42,7 @@
 class FL_EXPORT Fl_Value_Slider : public Fl_Slider {
     Fl_Font textfont_;
     Fl_Fontsize textsize_;
-    unsigned textcolor_;
+    Fl_Color textcolor_;
 protected:
     void draw();
 public:
@@ -57,9 +57,9 @@ public:
     /**    Sets the size of the text in the value box.  */
     void textsize(Fl_Fontsize s) {textsize_ = s;}
     /**    Gets the color of the text in the value box.  */
-    Fl_Color textcolor() const {return (Fl_Color)textcolor_;}
+    Fl_Color textcolor() const {return textcolor_;}
     /**    Sets the color of the text in the value box.  */
-    void textcolor(unsigned s) {textcolor_ = s;}
+    void textcolor(Fl_Color s) {textcolor_ = s;}
 };
 
 #endif
